Fix blank page: externalize React/ReactDOM in IIFE + load UMDs first (null/useEffect crash).

--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
-    <title>Home | New Jersey Student Financial Aid | HESAA</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>Home | New Jersey Student Financial Aid | HESAA</title>
 
-    <!-- Favicon + PWA-ish bits -->
-    <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
-    <meta name="theme-color" content="#0a2c5f" />
+  <!-- Favicon + PWA-ish bits -->
+  <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
+  <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
+  <meta name="theme-color" content="#0a2c5f" />
 
-    <!-- Compiled Tailwind CSS -->
-    <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
-  </head>
-  <body class="antialiased bg-white text-slate-900">
-    <!-- Vite/React mount -->
-    <div id="root"></div>
-  <!-- React UMD (must execute BEFORE our IIFE) -->
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+  <!-- Compiled Tailwind CSS -->
+  <link rel="stylesheet" href="/assets/app/hesaa-homepage.css?v=1" />
+</head>
+<body class="antialiased bg-white text-slate-900">
+  <!-- Vite/React mount -->
+  <div id="root"></div>
 
-  <!-- Sanity guard: if React failed to load, warn and bail (prevents cryptic null/useEffect error) -->
+  <!-- 1) React UMDs MUST load before our IIFE -->
+  <script src="https://unpkg.com/react@18.3.1/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js" crossorigin></script>
+
+  <!-- 2) Guard – if React failed to load, bail (prevents null/useEffect error) -->
   <script>
     if (!window.React || !window.ReactDOM) {
       console.error("React UMD failed to load. Check network/CSP.");
+      // stop here so our IIFE won’t run against null React
+      throw new Error("React UMD missing");
     }
   </script>
 
-  <!-- Your compiled homepage app (IIFE) -->
+  <!-- 3) Your compiled homepage app (IIFE) -->
   <script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
-<!-- Google Translate loader (callback is created by Header.tsx) -->
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
 
-
-  </body>
+  <!-- 4) Google Translate loader (Header defines global callback) -->
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+</body>
 </html>
