--- a/index.html
+++ b/index.html
@@ -16,24 +16,22 @@
 <body class="antialiased bg-white text-slate-900">
   <!-- Vite/React mount -->
   <div id="root"></div>
+<!-- React UMD (must execute BEFORE our IIFE) -->
+<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
 
-  <!-- 1) React UMDs MUST load before our IIFE -->
-  <script src="https://unpkg.com/react@18.3.1/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js" crossorigin></script>
+<!-- Sanity guard (optional) -->
+<script>
+  if (!window.React || !window.ReactDOM) {
+    console.error("React UMD failed to load. Check network/CSP.");
+  }
+</script>
 
-  <!-- 2) Guard – if React failed to load, bail (prevents null/useEffect error) -->
-  <script>
-    if (!window.React || !window.ReactDOM) {
-      console.error("React UMD failed to load. Check network/CSP.");
-      // stop here so our IIFE won’t run against null React
-      throw new Error("React UMD missing");
-    }
-  </script>
+<!-- Your compiled homepage app (IIFE) -->
+<script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
 
-  <!-- 3) Your compiled homepage app (IIFE) -->
-  <script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
+<!-- Google Translate loader (callback is created by Header.tsx) -->
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
 
-  <!-- 4) Google Translate loader (Header defines global callback) -->
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
 </body>
 </html>
