--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
   </head>
   <body class="antialiased bg-white text-slate-900">
   <!-- Compiled Tailwind CSS -->
-  <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
-
+    <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   <div id="root"></div>
 
-  <!-- Your compiled homepage app (IIFE) -->
-  <script src="/assets/app/hesaa-homepage.iife.js?v=2" defer></script>
+  <!-- One script: your bundled IIFE -->
+  <script src="/assets/app/hesaa-homepage.iife.js?v=3" defer></script>
 
-  <!-- Google Translate loader (callback is created by Header.tsx) -->
+  <!-- Google Translate (Header wires the callback) -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
 </body>
 </html>
