--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
  <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
 <div id="root"></div>
 
-<script src="/assets/app/hesaa-homepage.iife.js?v=4" defer></script>
+<!-- keep this: your built app -->
+<script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
+
+<!-- keep this: Google Translate loader -->
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
 
 </body>
