Fix runtime: shim process.env for browser (avoid 'process is not defined')

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <body class="antialiased bg-white text-slate-900">
  <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
 <div id="root"></div>
+<script>
+  window.process = window.process || { env: { NODE_ENV: "production" } };
+</script>
 
 <!-- keep this: your built app -->
 <script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
