--- a/index.html
+++ b/index.html
@@ -9,33 +9,17 @@
     <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
     <meta name="theme-color" content="#0a2c5f" />
 
+    <!-- Compiled Tailwind/CSS -->
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- tiny shim some libs expect -->
+    <!-- Minimal process shim so React runtime never complains -->
     <script>window.process = window.process || { env: { NODE_ENV: "production" } };</script>
 
-    <!-- 1) React UMDs: NO defer -->
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
-    <script>
-      // expose client API as a global for the external map
-      window.ReactDOMClient = { createRoot: ReactDOM.createRoot };
-    </script>
-
-    <!-- 2) Sanity guard so we fail loudly if UMDs didn't load -->
-    <script>
-      if (!window.React || !window.ReactDOM || !window.ReactDOMClient) {
-        document.body.innerHTML =
-          "<pre style='padding:1rem;color:#b91c1c'>React UMDs failed to load. Check network/CSP.</pre>";
-        throw new Error("React UMDs not available");
-      }
-    </script>
-
-    <!-- 3) Your bundled app IIFE: DEFER so it runs after UMDs -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=5" defer></script>
+    <!-- Your IIFE bundle (contains React, ReactDOM, your app) -->
+    <script src="/assets/app/hesaa-homepage.iife.js?v=6" defer></script>
 
     <!-- Google Translate loader (callback is created by Header.tsx) -->
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
