--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- tiny shim so React doesn’t look for node’s process -->
-    <script>window.process = window.process || { env: { NODE_ENV: "production" } };</script>
+    <!-- React UMDs (globals used by the bundle) -->
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom-client.production.min.js" crossorigin></script>
 
-    <!-- single-file bundle (now includes React + ReactDOM) -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=7" defer></script>
+    <!-- your single-file app (built as IIFE that expects React globals) -->
+    <script src="/assets/app/hesaa-homepage.iife.js?v=8" defer></script>
 
     <!-- Google Translate loader (Header defines the callback) -->
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
