--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- React UMDs (globals used by the bundle) -->
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom-client.production.min.js" crossorigin></script>
+  <!-- React UMDs (LOCAL) – MUST come before the IIFE -->
+<script src="/assets/vendor/react.production.min.js"></script>
+<script src="/assets/vendor/react-dom.production.min.js"></script>
+<script src="/assets/vendor/react-dom-client.production.min.js"></script>
 
-    <!-- your single-file app (built as IIFE that expects React globals) -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=8" defer></script>
+<!-- sanity guard so failures are obvious -->
+<script>
+  if (!window.React || !window.ReactDOM || !window.ReactDOMClient) {
+    console.error("React UMD failed to load.");
+  }
+</script>
 
-    <!-- Google Translate loader (Header defines the callback) -->
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+<!-- your compiled IIFE -->
+<script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
+
+<!-- Google Translate loader -->
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+
   </body>
 </html>
