--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-  <!-- React UMDs (LOCAL) – MUST come before the IIFE -->
+<!-- React UMDs (local, no CORS) -->
 <script src="/assets/vendor/react.production.min.js"></script>
 <script src="/assets/vendor/react-dom.production.min.js"></script>
-<script src="/assets/vendor/react-dom-client.production.min.js"></script>
 
-<!-- sanity guard so failures are obvious -->
+<!-- Guard: bail if missing -->
 <script>
-  if (!window.React || !window.ReactDOM || !window.ReactDOMClient) {
+  if (!window.React || !window.ReactDOM || !window.ReactDOM.createRoot) {
     console.error("React UMD failed to load.");
   }
 </script>
 
-<!-- your compiled IIFE -->
+<!-- Your compiled homepage app (IIFE) -->
 <script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
+
 
 <!-- Google Translate loader -->
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
