--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
-  <body class="antialiased bg-white text-slate-900">
-    <div id="root"></div>
+<body class="antialiased bg-white text-slate-900">
+  <div id="root"></div>
 
-<!-- React UMDs (local, no CORS) -->
-<script src="/assets/vendor/react.production.min.js"></script>
-<script src="/assets/vendor/react-dom.production.min.js"></script>
+  <!-- React UMD (local copies) -->
+  <script src="/assets/vendor/react.production.min.js"></script>
+  <script src="/assets/vendor/react-dom.production.min.js"></script>
 
-<!-- Guard: bail if missing -->
-<script>
-  if (!window.React || !window.ReactDOM || !window.ReactDOM.createRoot) {
-    console.error("React UMD failed to load.");
-  }
-</script>
+  <!-- SHIM: prevent “process is not defined” in the IIFE -->
+  <script>
+    window.process = window.process || { env: { NODE_ENV: "production" } };
+  </script>
 
-<!-- Your compiled homepage app (IIFE) -->
-<script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
+  <!-- Your compiled app (leave this as is, can keep `?v=...`) -->
+  <script src="/assets/app/hesaa-homepage.iife.js?v=1"></script>
 
+  <!-- Google Translate (ok to defer) -->
+  <script
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    defer>
+  </script>
+</body>
 
-<!-- Google Translate loader -->
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
-
-  </body>
 </html>
