--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
 <body class="antialiased bg-white text-slate-900">
-  <div id="root"></div>
+<div id="root"></div>
 
-<!-- React UMD (one copy only) -->
+<!-- React UMD: exactly one copy, and BEFORE your IIFE -->
 <script src="/assets/vendor/react.production.min.js"></script>
 <script src="/assets/vendor/react-dom.production.min.js"></script>
 
-<!-- Shim so any lingering process.env checks are safe -->
+<!-- process shim so any old code reading process.env doesn't crash -->
 <script>window.process = window.process || { env: { NODE_ENV: "production" } };</script>
 
-<!-- Your app IIFE (must come after React UMD) -->
-<script src="/assets/app/hesaa-homepage.iife.js?v=1"></script>
+<!-- Your compiled app (IIFE) — keep a cache-busting query if you like -->
+<script src="/assets/app/hesaa-homepage.iife.js?v=2"></script>
 
-<!-- OK to defer Google Translate -->
+<!-- Google Translate can be deferred -->
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+
 
     defer>
   </script>
