--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <title>Home | New Jersey Student Financial Aid | HESAA</title>
-    <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
-    <meta name="theme-color" content="#0a2c5f" />
+
+    <!-- Compiled CSS -->
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
+
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- ✅ Only your bundled IIFE -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=4" defer></script>
+    <!-- ✅ UMD React globals (LOCAL files; no CORS) -->
+    <script src="/assets/vendor/react.production.min.js"></script>
+    <script src="/assets/vendor/react-dom.production.min.js"></script>
 
-    <!-- Optional: Google translate loader -->
+    <!-- ✅ Your IIFE which expects window.React / window.ReactDOM -->
+    <script src="/assets/app/hesaa-homepage.iife.js?v=5" defer></script>
+
+    <!-- If you need Google Translate -->
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
   </body>
 </html>
