--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
     />
     <title>Home | New Jersey Student Financial Aid | HESAA</title>
 
-    <!-- Compiled CSS -->
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
 
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- ✅ UMD React globals (LOCAL files; no CORS) -->
-    <script src="/assets/vendor/react.production.min.js"></script>
-    <script src="/assets/vendor/react-dom.production.min.js"></script>
+    <!-- One script. No React UMD, no extra tags, no stray "defer>" text -->
+    <script src="/assets/app/hesaa-homepage.iife.js?v=6" defer></script>
 
-    <!-- ✅ Your IIFE which expects window.React / window.ReactDOM -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=5" defer></script>
-
-    <!-- If you need Google Translate -->
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+    <!-- (optional) Google Translate -->
+    <script
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+      defer
+    ></script>
   </body>
 </html>
