--- a/index.html
+++ b/index.html
@@ -2,25 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Home | New Jersey Student Financial Aid | HESAA</title>
 
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
-
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- One script. No React UMD, no extra tags, no stray "defer>" text -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=6" defer></script>
+    <!-- One script. No react/react-dom UMD tags anywhere. -->
+    <script src="/assets/app/hesaa-homepage.iife.js?v=rebundle1" defer></script>
 
-    <!-- (optional) Google Translate -->
-    <script
-      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-      defer
-    ></script>
+    <!-- optional -->
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
   </body>
 </html>
