Bundle React into IIFE and fix process shim

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Home | New Jersey Student Financial Aid | HESAA</title>
 
+    <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
+    <meta name="theme-color" content="#0a2c5f" />
+
+    <!-- compiled Tailwind -->
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
   <body class="antialiased bg-white text-slate-900">
     <div id="root"></div>
 
-    <!-- One script. No react/react-dom UMD tags anywhere. -->
-    <script src="/assets/app/hesaa-homepage.iife.js?v=rebundle1" defer></script>
+    <!-- Your app — React is bundled inside this file -->
+    <script src="/assets/app/hesaa-homepage.iife.js?v=1" defer></script>
 
-    <!-- optional -->
+    <!-- Google Translate loader (unchanged) -->
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
   </body>
 </html>
