--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,24 +7,28 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <title>HESAA</title>
-       <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
+
+    <!-- Favicon + PWA-ish bits -->
+    <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
     <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
     <meta name="theme-color" content="#0a2c5f" />
-    <!-- Tailwind output (PostCSS CLI) -->
+
+    <!-- Compiled Tailwind CSS -->
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
   </head>
+  <body class="antialiased bg-white text-slate-900">
+    <!-- Vite/React mount -->
+    <div id="root"></div>
 
-  <body class="antialiased">
-    <!-- React root -->
-    <div id="hesaa-homepage-root"></div>
+    <!-- SPA IIFE bundle (built by Vite) -->
+    <script src="/assets/app/hesaa-homepage.iife.js" defer></script>
 
-    <!-- Google Translate (callback is provided by Header component) -->
+    <!-- Google Translate loader (callback is created by Header.tsx) -->
     <script
+      id="gt-script"
       src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+      async
       defer
     ></script>
-
-    <!-- Your compiled React IIFE -->
-    <script src="/assets/app/hesaa-homepage.iife.js" defer></script>
   </body>
 </html>
