fixing ui on the header with 3 row right side links, and menu show on hover only and google translate

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <!-- Compiled Tailwind CSS -->
     <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
+<style>
+  #gt-container select { width: 100% !important; }
+  #gt-container .skiptranslate iframe { display: none !important; }
+</style>
+
   </head>
   <body class="antialiased bg-white text-slate-900">
     <!-- Vite/React mount -->
