fixed the translate popover position, and single function for both mobile and desktop

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>HESAA</title>
+    <title>Home | New Jersey Student Financial Aid | HESAA</title>
 
     <!-- Favicon + PWA-ish bits -->
     <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
