--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
     <script src="/assets/app/hesaa-homepage.iife.js" defer></script>
 
     <!-- Google Translate loader (callback is created by Header.tsx) -->
-    <script
-      id="gt-script"
-      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-      async
-      defer
-    ></script>
+<script id="gt-script" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+
   </body>
 </html>
